Refactor Dockerfile for multi-stage build and add Spring Boot Actuator dependencies

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,11 @@ spring:
           uri: http://localhost:8083
           predicates:
             - Path=/inventory/**
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - info
+          - prometheus
