--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-starter-bootstrap</artifactId>
 </dependency>
+<!-- para que prometheus muestre info -->
+<dependency>
+  <groupId>io.micrometer</groupId>
+  <artifactId>micrometer-registry-prometheus</artifactId>
+</dependency>
 
 	</dependencies>
 	<dependencyManagement>
