Add Spring Cloud Netflix Eureka Client dependency and update Spring Cloud dependencies version

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-logging</artifactId>
     </dependency>
-
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -57,6 +57,10 @@
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-starter-bootstrap</artifactId>
 </dependency>
+<dependency>
+	<groupId>org.springframework.cloud</groupId>
+	<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+</dependency>
 <!-- para que prometheus muestre info -->
 <dependency>
   <groupId>io.micrometer</groupId>
@@ -73,6 +77,13 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+					<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>2024.0.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -84,5 +95,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
